--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -1,7 +1,12 @@
 ﻿<Application x:Class="IngresoPedidos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/MainWindowView.xaml">
+   
+    
+    
+
+    
     <Application.Resources>
         
         <!--#region ToolBar-->
@@ -236,7 +241,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ComboBoxItem}">
                         <!--alineacion del texto cuando esta abierto-->
-                        <Border Name="Border" Padding="1" SnapsToDevicePixels="true" HorizontalAlignment="Center">
+                        <Border Name="Border" Padding="1" SnapsToDevicePixels="true" HorizontalAlignment="Stretch">
                             <ContentPresenter />
                         </Border>
                         <ControlTemplate.Triggers>
@@ -251,6 +256,8 @@
             </Setter>
         </Style>
         <!--#endregion-->
-        
+
     </Application.Resources>
+    
+    
 </Application>
