--- a/IngresoPedidos/Views/EventosView.xaml
+++ b/IngresoPedidos/Views/EventosView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="IngresoPedidos.Views.MovimientosView"
+﻿<Window x:Class="IngresoPedidos.Views.EventosView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
-        Title="MOVIMIENTOS DEL REGISTRO 1234567A-00" Height="480" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="REGISTRO DE EVENTOS" Height="480" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid Margin="0">
         <!--<TextBox Name="tbMovimientos" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" TextWrapping="NoWrap" Margin="10,302,10,10" IsReadOnly="True" FontFamily="Consolas" FontSize="14" Padding="0" />-->
         <Label Margin="10,10,0,0" Content="FECHA" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="84"/>
@@ -13,7 +13,7 @@
         <Label Margin="167,10,0,0" Content="LEGAJO" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="59"/>
         <Label Margin="227,10,10,0" Content="EVENTO [ATRIBUTO] [COMENTARIO]" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="5,0,0,0" Height="26" VerticalContentAlignment="Center"/>
         <ListBox AlternationCount="2" Name="lbMovimientos" BorderBrush="#FFA9D1F4" SelectionMode="Single" SelectionChanged="LbMovimientos_SelectionChanged" BorderThickness="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,41,10,10" FontFamily="Consolas"/>
-        <Button Margin="0,10,10,0" VerticalAlignment="Top" Height="26" Background="{x:Null}" HorizontalAlignment="Right" Width="26"  ToolTip="Guardar copia de movimientos" BorderBrush="{x:Null}" Foreground="{x:Null}">
+        <Button Margin="0,10,10,0" VerticalAlignment="Top" Height="26" Background="{x:Null}" HorizontalAlignment="Right" Width="26"  ToolTip="Guardar copia del registro" BorderBrush="{x:Null}" Foreground="{x:Null}">
             <Image Source="/IngresoPedidos;component/Resources/save.ico" Width="22" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Button>
     </Grid>
