--- a/IngresoPedidos/Views/FormularioPedidoView.xaml
+++ b/IngresoPedidos/Views/FormularioPedidoView.xaml
@@ -5,55 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
-        Title="ALTA DE NUEVO PEDIDO" Height="513.266" Width="267.871" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="FORMULARIO DE PEDIDOS" Height="486" Width="265" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
 
-    <Grid Margin="10,10,4,10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="69*"/>
-            <RowDefinition Height="389*"/>
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Background="#FFA9D1F4" VerticalAlignment="Center" Margin="-14,9,-11,9">
+    <Grid FocusManager.FocusedElement="{Binding ElementName=tbPedido}">
+        <Button ToolTip="Guardar en Base de Datos" HorizontalAlignment="Center" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,388,0,0" TabIndex="9">
+            <Image Source="/IngresoPedidos;component/Resources/save.ico" Width="48" Height="48"  />
+        </Button>
 
-            <Button ToolTip="Cortar selección al Portapapeles" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,0,201,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}">
-                <Image Source="/IngresoPedidos;component/Resources/save.ico" Width="48" Height="48"  />
-            </Button>
-
-            <Button  ToolTip="Añadir a lista Personalizada" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="77,0,144,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <Image Source="/IngresoPedidos;component/Resources/rubberstamp256.png" Width="48" Height="48" HorizontalAlignment="Left" VerticalAlignment="Center" />
-            </Button>
-
-            <Button  ToolTip="Añadir a lista Personalizada" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="134,0,87,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <Image Source="/IngresoPedidos;component/Resources/128.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-            </Button>
-
-            <Button  ToolTip="Añadir a lista Personalizada" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="188,0,33,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <Image Source="/IngresoPedidos;component/Resources/128 (16).ico" Width="48" Height="48" HorizontalAlignment="Left" VerticalAlignment="Center" />
-            </Button>
-
-        </Grid>
-
-        <Label Content="PEDIDO" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Height="26" VerticalAlignment="Top" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1"/>
-        <Label Content="MODELO" HorizontalAlignment="Left" Margin="0,41,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" RenderTransformOrigin="0.292,0.533" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1"/>
-        <Label Content="ARTICULO" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1"/>
-        <Label Content="PRODUCTO" HorizontalAlignment="Left" Margin="0,72,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Center" Background="#FFA9D1F4" Width="66" Grid.Row="1"/>
-        <Label Content="CANTIDAD" HorizontalAlignment="Left" Margin="0,134,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1"/>
-        <Label Content="ORIGINAL" HorizontalAlignment="Left" Margin="0,196,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1"/>
-        <Label Content="OBSERVACION" HorizontalAlignment="Left" Margin="0,227,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="232" Height="26" Background="#FFA9D1F4" Grid.Row="1"/>
-        <Label Content="ESTADO" Margin="0,165,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" HorizontalAlignment="Left" RenderTransformOrigin="-0.775,4.333" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1"/>
-        <TextBox Height="26" TextWrapping="Wrap" VerticalAlignment="Top" Margin="72,103,0,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="160" HorizontalAlignment="Left" Grid.Row="1"/>
-        <ComboBox Style="{x:Null}" Margin="71,42,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Height="26" Width="160" RenderTransformOrigin="0.515,-1.115" HorizontalAlignment="Left" Grid.Row="1">
+        <Label Content="PEDIDO" HorizontalAlignment="Left" Margin="8,10,0,0" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" VerticalAlignment="Top" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1" FontFamily="Consolas"/>
+        <Label Content="MODELO" HorizontalAlignment="Left" Margin="8,41,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" RenderTransformOrigin="0.292,0.533" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1" FontFamily="Consolas"/>
+        <Label Content="ARTICULO" HorizontalAlignment="Left" Margin="8,103,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1" FontFamily="Consolas"/>
+        <Label Content="PRODUCTO" HorizontalAlignment="Left" Margin="8,72,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Center" Background="#FFA9D1F4" Width="66" Grid.Row="1" FontFamily="Consolas"/>
+        <Label Content="CANTIDAD" HorizontalAlignment="Left" Margin="8,134,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1" FontFamily="Consolas"/>
+        <Label Content="ANTERIOR" HorizontalAlignment="Left" Margin="8,196,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1" FontFamily="Consolas"/>
+        <Label Content="OBSERVACION" Margin="8,227,8,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" Background="#FFA9D1F4" FontFamily="Consolas" HorizontalAlignment="Center" Width="243"/>
+        <Label Content="ESTADO" Margin="8,165,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" HorizontalAlignment="Left" RenderTransformOrigin="-0.775,4.333" Height="26" HorizontalContentAlignment="Center" Width="67" Background="#FFA9D1F4" Grid.Row="1" FontFamily="Consolas"/>
+        <TextBox Height="26" TextWrapping="Wrap" VerticalAlignment="Top" Margin="0,103,8,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="160" HorizontalAlignment="Right" Grid.Row="1" TabIndex="4"/>
+        <ComboBox Style="{x:Null}" Margin="0,42,8,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Height="26" Width="160" RenderTransformOrigin="0.515,-1.115" HorizontalAlignment="Right" Grid.Row="1" Padding="15,0,0,0" TabIndex="2">
             <ComboBoxItem>H8</ComboBoxItem>
+            <ComboBoxItem>L6</ComboBoxItem>
+            <ComboBoxItem>SPANKY</ComboBoxItem>
+            <ComboBoxItem>WINGS</ComboBoxItem>
         </ComboBox>
-        <ComboBox Style="{x:Null}" IsEnabled="False" SelectedIndex="0" Margin="72,165,0,0" VerticalAlignment="Top" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Width="160" HorizontalAlignment="Left" Grid.Row="1">
+        <ComboBox Style="{x:Null}" IsEnabled="True" SelectedIndex="0" Margin="0,165,8,0" VerticalAlignment="Top" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Width="160" HorizontalAlignment="Right" Grid.Row="1" Padding="15,0,0,0" TabIndex="6">
             <ComboBoxItem>INGRESADO</ComboBoxItem>
+            <ComboBoxItem>COMPLETO</ComboBoxItem>
+            <ComboBoxItem>INCOMPLETO</ComboBoxItem>
+            <ComboBoxItem>AUTORIZADO</ComboBoxItem>
+            <ComboBoxItem>CANCELADO</ComboBoxItem>
+            <ComboBoxItem>REPROCESADO</ComboBoxItem>
+            <ComboBoxItem>DESPACHADO</ComboBoxItem>
         </ComboBox>
-        <TextBox Height="26" Margin="72,196,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" HorizontalAlignment="Left" Width="160" Grid.Row="1"/>
-        <TextBox Height="26" Margin="72,134,0,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" HorizontalAlignment="Left" Width="160" Grid.Row="1"/>
-        <ComboBox Style="{x:Null}" Margin="72,72,0,0" VerticalAlignment="Top" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Width="160" HorizontalAlignment="Left" Grid.Row="1">
+        <TextBox Height="26" Margin="0,196,8,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" HorizontalAlignment="Right" Width="160" Grid.Row="1" TabIndex="7"/>
+        <TextBox Height="26" Margin="0,134,8,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" HorizontalAlignment="Right" Width="160" Grid.Row="1" TabIndex="5"/>
+        <ComboBox Style="{x:Null}" Margin="0,72,8,0" VerticalAlignment="Top" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Width="160" HorizontalAlignment="Right" Grid.Row="1" Padding="15,0,0,0" TabIndex="3">
             <ComboBoxItem>ALL-IN-ONE</ComboBoxItem>
+            <ComboBoxItem>2-EN-1</ComboBoxItem>
+            <ComboBoxItem>NOTEBOOK</ComboBoxItem>
         </ComboBox>
-        <TextBox Text="1234567A-00" IsEnabled="False" Height="26" Margin="72,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Consolas" HorizontalAlignment="Left" Width="160" Grid.Row="1" FontWeight="Bold"/>
+        <TextBox Name="tbPedido" IsEnabled="True" Height="26" Margin="0,10,8,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Consolas" HorizontalAlignment="Right" Width="160" Grid.Row="1" FontWeight="Bold" TabIndex="1"/>
 
-        <TextBox Text="12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789A" Margin="0,258,0,0" TextWrapping="Wrap" MaxLength="240" MaxLines="3" Padding="3" FontFamily="Consolas" Height="120" VerticalAlignment="Top" HorizontalAlignment="Left" Width="232" Grid.Row="1" BorderBrush="#FFA9D1F4"/>
+        <TextBox Margin="8,258,8,0" BorderThickness="2" TextWrapping="Wrap" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFA9D1F4" Height="125" VerticalAlignment="Top" TabIndex="8"/>
     </Grid>
 </Window>
