--- a/IngresoPedidos/Views/ProcesandoView.xaml
+++ b/IngresoPedidos/Views/ProcesandoView.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="IngresoPedidos.ProcessingDialog"
+﻿<Window x:Class="IngresoPedidos.ProcesandoView"
      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
      xmlns:viewModels="clr-namespace:IngresoPedidos.ViewModels"
      Height="140" Width="340" MinHeight="140" MinWidth="340" Title="Ingreso de Pedidos" FontFamily="Segoe UI" ResizeMode="NoResize" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <viewModels:MainViewModel x:Key="ViewModel" />
+        <viewModels:MainWindowViewModel x:Key="ViewModel" />
     </Window.Resources>
     <DockPanel Margin="10">
         <Grid DockPanel.Dock="Bottom">
