--- a/IngresoPedidos/Views/MainWindowView.xaml
+++ b/IngresoPedidos/Views/MainWindowView.xaml
@@ -47,7 +47,7 @@
 
         </Grid>
 
-        <DataGrid Grid.Row="1" ItemsSource="{Binding ListaPedidos, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" SelectedItem="{Binding PedidoSeleccionado, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ColumnWidth="*" Margin="0,5,0,0">
+        <DataGrid Name="dgPedidos" Grid.Row="1" ItemsSource="{Binding ListaPedidos, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" SelectedItem="{Binding PedidoSeleccionado, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ColumnWidth="*" Margin="0,5,0,0">
             <DataGrid.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Editar registro" Click="Button_Click_5"/>
