--- a/IngresoPedidos/Views/SplashScreenView.xaml
+++ b/IngresoPedidos/Views/SplashScreenView.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:IngresoPedidos.Views"
         xmlns:viewModels="clr-namespace:IngresoPedidos.ViewModels"
         mc:Ignorable="d"
-        Title="ALTA DE PEDIDOS: EXO PRODUCCION" Height="380" Width="718" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Topmost="True" Cursor="Wait" Focusable="False" IsTabStop="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ShowInTaskbar="False">
+        Title="ALTA DE PEDIDOS: EXO PRODUCCION" Height="380" Width="718" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Wait" Focusable="False" IsTabStop="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ShowInTaskbar="False">
     <Window.Resources>
         <viewModels:SplashScreenViewModel x:Key="ViewModel" />
     </Window.Resources>
