--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -1,11 +1,7 @@
 ﻿<Application x:Class="IngresoPedidos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainWindowView.xaml">
-   
-    
-    
-
+             StartupUri="MainWindow.xaml">
     
     <Application.Resources>
         
