--- a/IngresoPedidos/Busqueda.xaml
+++ b/IngresoPedidos/Busqueda.xaml
@@ -1,10 +1,8 @@
-﻿<Window x:Class="IngresoPedidos.Views.BusquedaView"
+﻿<Window x:Class="IngresoPedidos.Busqueda"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-
-        xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
         Title="BUSQUEDA" Height="228.706" Width="248" ResizeMode="NoResize" WindowStartupLocation="CenterOwner"  Icon="/IngresoPedidos;component/Resources/agregar.ico">
     <!--xmlns:sys="clr-namespace:System;assembly=mscorlib"-->
