--- a/IngresoPedidos/Procesando.xaml
+++ b/IngresoPedidos/Procesando.xaml
@@ -1,17 +1,15 @@
-﻿<Window x:Class="IngresoPedidos.ProcesandoView"
+﻿<Window x:Class="IngresoPedidos.Procesando"
      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-     xmlns:viewModels="clr-namespace:IngresoPedidos.ViewModels"
      Height="140" Width="340" MinHeight="140" MinWidth="340" Title="Ingreso de Pedidos" FontFamily="Segoe UI" ResizeMode="NoResize" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen" Icon="/IngresoPedidos;component/Resources/agregar.ico">
-    <Window.Resources>
-        <viewModels:MainWindowViewModel x:Key="ViewModel" />
-    </Window.Resources>
-    <DockPanel Margin="10">
+
+        <DockPanel Margin="10">
         <Grid DockPanel.Dock="Bottom">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
+            
             <ProgressBar x:Name="ProgressBar" Grid.Column="0" IsIndeterminate="True" Height="22" />
             <Button x:Name="CancelButton" Grid.Column="1" Margin="3,0,0,0" Width="70" Height="22" Content="Cancel" Visibility="Collapsed" HorizontalAlignment="Right" />
         </Grid>
