--- a/IngresoPedidos/SplashScreenCustom.xaml
+++ b/IngresoPedidos/SplashScreenCustom.xaml
@@ -1,15 +1,11 @@
-﻿<Window x:Class="IngresoPedidos.Views.SplashScreenView"
+﻿<Window x:Class="IngresoPedidos.SplashScreenCustom"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IngresoPedidos.Views"
-        xmlns:viewModels="clr-namespace:IngresoPedidos.ViewModels"
         mc:Ignorable="d"
         Title="ALTA DE PEDIDOS: EXO PRODUCCION" Height="380" Width="718" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Wait" Focusable="False" IsTabStop="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ShowInTaskbar="False" Icon="/IngresoPedidos;component/Resources/agregar.ico">
-    <Window.Resources>
-        <viewModels:SplashScreenViewModel x:Key="ViewModel" />
-    </Window.Resources>
+
     <Grid>
         <Image Source="/IngresoPedidos;component/Resources/SplashScreen.png" Margin="0"/>
         <Label Name="lblEstado" Content="Cargando Lista de Pedidos..."  Margin="292,0,101,75" FontFamily="Consolas" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,2,0" Height="24"/>
