--- a/IngresoPedidos/FormularioPedido.xaml
+++ b/IngresoPedidos/FormularioPedido.xaml
@@ -1,33 +1,33 @@
-﻿<Window x:Class="IngresoPedidos.Views.FormularioPedidoView"
+﻿<Window x:Class="IngresoPedidos.FormularioPedido"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
-        Title="FORMULARIO DE PEDIDOS" Height="480" Width="255" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="/IngresoPedidos;component/Resources/agregar.ico">
+        Title="FORMULARIO DE PEDIDOS" Height="480" Width="244" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="/IngresoPedidos;component/Resources/agregar.ico">
 
     <Grid FocusManager.FocusedElement="{Binding ElementName=tbPedido}">
-        <Button Name="btnGuardar" Click="btnGuardar_Click" ToolTip="Guardar en Base de Datos" HorizontalAlignment="Center" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,383,0,0" TabIndex="9">
+
+        <Button Name="btnGuardar" Click="btnGuardar_Click" ToolTip="Guardar en Base de Datos" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,0,0,10" TabIndex="9" HorizontalAlignment="Center" Width="52" Height="52" VerticalAlignment="Bottom">
             <Image Source="/IngresoPedidos;component/Resources/guardar.ico" Width="48" Height="48"  />
         </Button>
 
-        <Label Content="PEDIDO" HorizontalAlignment="Left" Margin="8,10,0,0" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" VerticalAlignment="Top" HorizontalContentAlignment="Right" Width="55" Background="{x:Null}" FontFamily="Consolas"/>
-        <Label Content="MODELO" HorizontalAlignment="Left" Margin="8,41,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" RenderTransformOrigin="0.292,0.533" Height="26" HorizontalContentAlignment="Right" Width="55" Background="{x:Null}" FontFamily="Consolas"/>
-        <Label Content="ARTICULO" HorizontalAlignment="Left" Margin="8,103,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Width="55" Background="{x:Null}" FontFamily="Consolas"/>
-        <Label Content="PRODUCTO" HorizontalAlignment="Left" Margin="8,72,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Background="{x:Null}" Width="55" FontFamily="Consolas"/>
-        <Label Content="CANTIDAD" HorizontalAlignment="Left" Margin="8,134,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Width="55" Background="{x:Null}" FontFamily="Consolas"/>
-        <Label Content="ANTERIOR" HorizontalAlignment="Left" Margin="8,196,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" HorizontalContentAlignment="Right" Background="{x:Null}" Grid.Row="1" FontFamily="Consolas"/>
-        <Label Content="OBSERVACION" Margin="8,222,8,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" Padding="1" Height="26" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Center" Width="243"/>
-        <Label Content="ESTADO" Margin="8,165,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontWeight="Bold" Padding="1" HorizontalAlignment="Left" RenderTransformOrigin="-0.775,4.333" Height="26" HorizontalContentAlignment="Right" Width="55" Background="{x:Null}" FontFamily="Consolas"/>
-        <TextBox Name="tbArticulo" Height="26" TextWrapping="Wrap" VerticalAlignment="Top" Margin="0,103,8,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="160" HorizontalAlignment="Right" Grid.Row="1" TabIndex="4"/>
-        <ComboBox Name="cbModelo" Style="{x:Null}" Margin="0,42,8,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Height="26" Width="160" RenderTransformOrigin="0.515,-1.115" HorizontalAlignment="Right" Grid.Row="1" Padding="15,0,0,0" TabIndex="2">
+        <Label Content="PEDIDO" Margin="8,10,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" FontFamily="Consolas" Height="26" VerticalAlignment="Top" HorizontalAlignment="Left" Width="57" Background="{x:Null}" FontWeight="Bold"/>
+        <Label Content="MODELO" Margin="8,41,0,0" VerticalContentAlignment="Center" Padding="1" RenderTransformOrigin="0.292,0.533" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="ARTICULO" Margin="8,103,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="PRODUCTO" Margin="8,72,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="CANTIDAD" Margin="8,134,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="ANTERIOR" Margin="8,196,0,0" VerticalContentAlignment="Center" Padding="1" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" Height="26" VerticalAlignment="Top" HorizontalAlignment="Left" Width="57" FontWeight="Bold"/>
+        <Label Content="OBSERVACION" Margin="8,228,0,197" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" Padding="1" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="212"/>
+        <Label Content="ESTADO" Margin="8,165,0,0" VerticalContentAlignment="Center" Padding="1" RenderTransformOrigin="-0.775,4.333" HorizontalContentAlignment="Right" Background="{x:Null}" FontFamily="Consolas" HorizontalAlignment="Left" Width="57" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
+        <TextBox Name="tbArticulo" TextWrapping="Wrap" Margin="70,103,0,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="4" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top"/>
+        <ComboBox Name="cbModelo" Style="{x:Null}" Margin="70,42,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" RenderTransformOrigin="0.515,-1.115" Padding="15,0,0,0" TabIndex="2" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top">
             <ComboBoxItem>H8</ComboBoxItem>
             <ComboBoxItem>L6</ComboBoxItem>
             <ComboBoxItem>SPANKY</ComboBoxItem>
             <ComboBoxItem>WINGS</ComboBoxItem>
         </ComboBox>
-        <ComboBox Name="cbEstado" Style="{x:Null}" IsEnabled="True" SelectedIndex="0" Margin="0,165,8,0" VerticalAlignment="Top" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Width="160" HorizontalAlignment="Right" Grid.Row="1" Padding="15,0,0,0" TabIndex="6">
+        <ComboBox Name="cbEstado" Style="{x:Null}" IsEnabled="True" SelectedIndex="0" Margin="70,165,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Padding="15,0,0,0" TabIndex="6" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top">
             <ComboBoxItem>INGRESADO</ComboBoxItem>
             <ComboBoxItem>COMPLETO</ComboBoxItem>
             <ComboBoxItem>INCOMPLETO</ComboBoxItem>
@@ -36,15 +36,15 @@
             <ComboBoxItem>REPROCESADO</ComboBoxItem>
             <ComboBoxItem>DESPACHADO</ComboBoxItem>
         </ComboBox>
-        <TextBox Name="tbAnterior" Height="26" Margin="0,196,8,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" HorizontalAlignment="Right" Width="160" Grid.Row="1" TabIndex="7"/>
-        <TextBox Name="tbCantidad" Height="26" Margin="0,134,8,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" HorizontalAlignment="Right" Width="160" Grid.Row="1" TabIndex="5"/>
-        <ComboBox Name="cbProducto" Style="{x:Null}" Margin="0,72,8,0" VerticalAlignment="Top" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Width="160" HorizontalAlignment="Right" Grid.Row="1" Padding="15,0,0,0" TabIndex="3">
+        <TextBox Name="tbAnterior" Margin="70,196,0,0" TextWrapping="Wrap" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" TabIndex="7" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top"/>
+        <TextBox Name="tbCantidad" Margin="70,134,0,0" TextWrapping="Wrap" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="5" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top"/>
+        <ComboBox Name="cbProducto" Style="{x:Null}" Margin="70,72,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Padding="15,0,0,0" TabIndex="3" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top">
             <ComboBoxItem>ALL-IN-ONE</ComboBoxItem>
             <ComboBoxItem>2-EN-1</ComboBoxItem>
             <ComboBoxItem>NOTEBOOK</ComboBoxItem>
         </ComboBox>
-        <TextBox Name="tbPedido" IsEnabled="True" Height="26" Margin="0,10,8,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Consolas" HorizontalAlignment="Right" Width="160" Grid.Row="1" FontWeight="Bold" TabIndex="1"/>
+        <TextBox Name="tbPedido" IsEnabled="True" Margin="70,10,0,0" TextWrapping="Wrap" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Consolas" FontWeight="Bold" TabIndex="1" HorizontalAlignment="Left" Width="150" Height="26" VerticalAlignment="Top"/>
 
-        <TextBox Name="tbObservacion" Margin="8,248,8,0"  TextWrapping="Wrap" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFABADB3" Height="125" VerticalAlignment="Top" TabIndex="8"/>
+        <TextBox Name="tbObservacion" Margin="8,0,0,67" TextWrapping="Wrap" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFABADB3" TabIndex="8" Height="125" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="212"/>
     </Grid>
 </Window>
